external-crates/move/crates/move-compiler/tests/move_2024/parser/invalid_labels_2.exp
error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/invalid_labels_2.move:3:14
  │
3 │         loop 'block' {
  │              ^^^^^^^ Single-quote (') may only prefix control flow labels
  │
  = Character literals are not supported, and string literals use double-quote (").

error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/invalid_labels_2.move:3:22
  │
3 │         loop 'block' {
  │                      ^
  │                      │
  │                      Unexpected '{'
  │                      Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

